<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_detail_deal">DetailDealActivity</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="app_name">Budgety</string>
    <string name="action_settings">Settings</string>
    <string name="real_balance">Solde réel:</string>
    <string name="main_footnote">Taper pour capturer</string>
    <string name="balance">Solde :</string>
    <string name="confirm_photo_tap">Taper pour confirmer</string>
    <string name="default_text">No data</string>
    <string name="confirm_photo">Valider</string>
    <string name="delete">Supprimer</string>
    <string name="delete_info">Taper pour supprimer</string>
    <string name="notif">Test notif</string>
    <string name="display_home">Ouvrir Budgety</string>
    <string name="ceil">Plafond</string>
    <string name="price_placeholder">100€</string>
    <string name="transfer">Virement automatique</string>
    <string name="switch_off">OFF</string>
    <string name="switch_on">ON</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_alert">Alert</string>
    <string name="date_alert">Date</string>
    <string name="TV_deal_alert">Prix euros</string>
    <string name="TV_balance_estimated">Balance estimated</string>

</resources>
